fix chart clipping

--- a/src/main/webapp/app/exercises/shared/result/detail/result-detail.scss
+++ b/src/main/webapp/app/exercises/shared/result/detail/result-detail.scss
@@ -15,11 +15,9 @@
     }
 
     .result-score-chart {
-        margin-bottom: 1rem;
+        margin-bottom: 3rem;
 
         .chart-tooltip-space {
-            margin-top: -10px;
-
             .chart-tooltip-space-content {
                 width: 250px;
                 height: 20px;
